--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
     <!-- shoe card -->
     <section class="container" id="shoe">
       <h1>Shoe</h1>
-      <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="row row-cols-1 row-cols-md-3 g-5">
         <div class="col">
           <div class="card border-0 shadow-lg h-100">
-            <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+            <img src="images/shoes/shoe-1.png" class="card-img-top shoe-style" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
@@ -168,7 +168,6 @@
         </div>
       </div>
     </section>
-    
   </main>
   <footer>
 
